# ilixi

./: Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  ilixi.pc.in
data/: Makefile.am  Makefile.in  apps.conf
data/designer/: Makefile.am  Makefile.in
data/tdesigner/: Makefile.am  Makefile.in  stylesheet.xml
doc/: Makefile.am  Makefile.in
doc/resources/: Makefile.am  Makefile.in
ilixi/: Makefile.am  Makefile.in  ilixiConfig.h  ilixiConfig.h.in  ilixiGUI.h
ilixi/core/: AppBase.cpp  AppBase.h  IFusion.h  Logger.cpp  Logger.h  Makefile.am  Makefile.in  Thread.cpp  Thread.h  UIManager.cpp  UIManager.h  Utils.h  Window.cpp  Window.h
ilixi/graphics/: Designer.cpp  Designer.h  Makefile.am  Makefile.in  Painter.cpp  Painter.h  Palette.cpp  Palette.h  Surface.cpp  Surface.h  TDesigner.cpp  TDesigner.h
ilixi/lib/: Animation.cpp  Animation.h  Easing.cpp  Easing.h  Makefile.am  Makefile.in  SQLITE3Driver.cpp  SQLITE3Driver.h  Tween.cpp  Tween.h  TweenAnimation.cpp  TweenAnimation.h
ilixi/types/: Brush.cpp  Brush.h  Color.cpp  Color.h  Enums.h  Event.h  Font.cpp  Font.h  FontMetrics.cpp  FontMetrics.h  Gradient.cpp  Gradient.h  Image.cpp  Image.h  LinearGradient.cpp  LinearGradient.h  Makefile.am  Makefile.in  Margin.cpp  Margin.h  Pen.cpp  Pen.h  Point.cpp  Point.h  RadialGradient.cpp  RadialGradient.h  RadioGroup.cpp  RadioGroup.h  Rectangle.cpp  Rectangle.h  Size.cpp  Size.h  Video.cpp  Video.h
ilixi/ui/: Application.cpp  Application.h  BorderBase.cpp  BorderBase.h  Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  ComboBox.cpp  ComboBox.h  ContainerBase.cpp  ContainerBase.h  Dialog.cpp  Dialog.h  DirectionalButton.cpp  DirectionalButton.h  Frame.cpp  Frame.h  Graph.cpp  Graph.h  GridLayout.cpp  GridLayout.h  GroupBox.cpp  GroupBox.h  HBoxLayout.cpp  HBoxLayout.h  Icon.cpp  Icon.h  Label.cpp  Label.h  LayoutBase.cpp  LayoutBase.h  Line.cpp  Line.h  LineEdit.cpp  LineEdit.h  Makefile.am  Makefile.in  MessageDialog.cpp  MessageDialog.h  (+32 more)
