## Makefile.am for data
SUBDIRS			= 	designer tdesigner
miscdatadir 	=	$(ILIXI_DATADIR)
miscdata_DATA 	=	apps.conf \
					app.png \
					backspace.png \
					cancel.png \
					caps.png \
					clear.png \
					colors.png \
					download.png \
					home.png \
					ilixi_bg.jpg \
					left_arrow.png \
					lock.png \
					ok.png \
					restart.png \
					return.png \
					right_arrow.png \
					shutdown.png \
					space.png \
					upload.png
EXTRA_DIST 		= 	$(miscdata_DATA)
