## Makefile.am for data
SUBDIRS		= 	designer tdesigner
miscdatadir 	=	$(ILIXI_DATADIR)
miscdata_DATA 	=	app.png \
			backspace.png \
			cancel.png \
			caps.png \
			colors.png \
			default.png \
			download.png \
			fullscreen.png \
			home.png \
			ilixi_bg.jpg \
			info.png \
			left_arrow.png \
			lock.png \
			ok.png \
			pause.png \
			play.png \
			restart.png \
			return.png \
			rewind.png \
			right_arrow.png \
			shutdown.png \
			space.png \
			upload.png 
EXTRA_DIST 	= 	$(miscdata_DATA)
