## Makefile.am for data/tdesigner
tdesignerdatadir 	=	$(ILIXI_DATADIR)/tdesigner
tdesignerdata_DATA 	=	arrow_down.png \
				arrow_left.png \
				arrow_right.png \
				arrow_up.png \
				checkEmpty.png \
				checkFull.png \
				checkPartial.png \
				dialog.png \
				dialog_critical.png \
				dialog_info.png \
				dialog_question.png \
				dialog_warning.png \
				grid.png \
				minus.png \
				plus.png \
				stylesheet.xml
		
EXTRA_DIST 		= 	$(tdesignerdata_DATA)
