## Makefile.am for /ilixi/types
INCLUDES 						= 	-I$(top_srcdir)/ilixi
noinst_LTLIBRARIES 				= 	libilixi_types.la
libilixi_types_la_CPPFLAGS 		= 	@DEPS_CFLAGS@
libilixi_types_la_LIBADD 		= 	@DEPS_LIBS@
libilixi_types_la_SOURCES 		= 	Brush.cpp \
									Color.cpp \
									Font.cpp \
									FontMetrics.cpp \
									Gradient.cpp \
									Image.cpp \
									LinearGradient.cpp \
									Margin.cpp \
									Pen.cpp \
									Point.cpp \
									RadialGradient.cpp \
									RadioGroup.cpp \
									Rectangle.cpp \
									Size.cpp

ilixi_includedir 				= 	$(includedir)/$(PACKAGE)-$(VERSION)/types
nobase_ilixi_include_HEADERS 	= 	Brush.h \
									Color.h \
									Enums.h \
									Event.h \
									Font.h \
									FontMetrics.h \
									Gradient.h \
									Image.h \
									LinearGradient.h \
									Margin.h \
									Pen.h \
									Point.h \
									RadialGradient.h \
									RadioGroup.h \
									Rectangle.h \
									Size.h
