## Makefile.am for /ilixi/ui
INCLUDES 				= 	-I$(top_srcdir)/ilixi
noinst_LTLIBRARIES 		= 	libilixi_ui.la
libilixi_ui_la_CPPFLAGS	= 	@DEPS_CFLAGS@
libilixi_ui_la_LIBADD 	= 	@DEPS_LIBS@
								
libilixi_ui_la_SOURCES 	= 	Application.cpp \
							BorderBase.cpp \
							Button.cpp \
							Checkbox.cpp \
							ComboBox.cpp \
							ContainerBase.cpp \
							Dialog.cpp \
							DirectionalButton.cpp \
							Frame.cpp \
							Graph.cpp \
							GridLayout.cpp \
							GroupBox.cpp \
							HBoxLayout.cpp \
							Icon.cpp \
							Label.cpp \
							LayoutBase.cpp \
							Line.cpp \
							LineEdit.cpp \
							MessageDialog.cpp \
							ProgressBar.cpp \
							PushButton.cpp \
							RadioButton.cpp \
							ScrollArea.cpp \
							ScrollBar.cpp \
							Slider.cpp \
							SliderBase.cpp \
							SpinBox.cpp \
							TabPanel.cpp \
							TextLayout.cpp \
							ToolBar.cpp \
							ToolButton.cpp \
							VBoxLayout.cpp \
							Widget.cpp

ilixi_includedir 		= 	$(includedir)/$(PACKAGE)-$(VERSION)/ui
ilixi_include_HEADERS 	= 	Application.h \
							BorderBase.h \
							Button.h \
							Checkbox.h \
							ComboBox.h \
							ContainerBase.h \
							Dialog.h \
							DirectionalButton.h \
							Frame.h \
							Graph.h \
							GridLayout.h \
							GroupBox.h \
							HBoxLayout.h \
							Icon.h \
							Label.h \
							LayoutBase.h \
							Line.h \
							LineEdit.h \
							MessageDialog.h \
							ProgressBar.h \
							PushButton.h \
							RadioButton.h \
							ScrollArea.h \
							ScrollBar.h \
							Slider.h \
							SliderBase.h \
							SpinBox.h \
							TabPanel.h \
							TextLayout.h \
							ToolBar.h \
							ToolButton.h \
							VBoxLayout.h \
							Widget.h

